I HATE RELATIVE PATH

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -97,7 +97,7 @@ h2{
   top: -40%;
   left: 20vw;
   border-radius: 1rem;
-  background: url('assets\img\blueSky.gif') no-repeat;
+  background: url('assets/img/blueSky.gif') no-repeat;
   background-size: cover;
   visibility: hidden;
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
