--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -35,7 +35,7 @@ $background: #B1740F;
     letter-spacing: 2px;
     font-weight: 100;
   }
-  .btn-search{
+  .btn-search-one, .btn-search-two{
     width: 50px;
     height: 50px;
     border-style: none;
@@ -50,7 +50,14 @@ $background: #B1740F;
     background-color:transparent;
     pointer-events: painted;  
   }
-  .btn-search:focus ~ .input-search{
+  // .btn-search-one:focus ~ .input-search{
+  //   width: 300px;
+  //   border-radius: 0px;
+  //   background-color: transparent;
+  //   border-bottom:1px solid rgba(255,255,255,.5);
+  //   transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+  // }
+  .btn-search-two:focus ~ .input-search{
     width: 300px;
     border-radius: 0px;
     background-color: transparent;
@@ -97,7 +104,7 @@ h2{
   top: -40%;
   left: 20vw;
   border-radius: 1rem;
-  background: url('assets/img/blueSky.gif') no-repeat;
+  background: url('/blueSky.gif') no-repeat;
   background-size: cover;
   visibility: hidden;
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -118,13 +125,13 @@ span{
 
 @media (max-width:1199px){
   .moveMain{
-    height: 90vh;
+    height: 70vh;
 
   }
 }
 @media (max-width:799px){
   .moveMain{
-    height: 138vh;
+    height: 120vh;
 
   }
 }
