--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -111,7 +111,7 @@ h2 {
   top: -40%;
   left: 20vw;
   border-radius: 1rem;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-35deg, #FF5154, #C6C013);
   background-size: cover;
   visibility: hidden;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
@@ -138,6 +138,6 @@ span {
 }
 @media (max-width: 799px) {
   .moveMain {
-    height: 120vh;
+    height: 150vh;
   }
 }/*# sourceMappingURL=style.css.map */
