--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -100,7 +100,7 @@ h2{
 .moveMain{
   position: relative;
   width: 50vw;
-  height: 60vh;
+  height: 70vh;
   top: -40%;
   left: 20vw;
   border-radius: 1rem;
@@ -122,6 +122,7 @@ h2{
 
 span{
   font-weight: bold;
+  display: block;
 }
 
 @media (max-width:1199px){
